Made extra source code to create plot that represents procentual change in price per room type, edit makefile to run the source code too

--- a/src/analysis/makefile
+++ b/src/analysis/makefile
@@ -2,8 +2,11 @@ INPUT = ../../src/input
 RESULT = ../../gen/analysis/output
 
 
-all: plot_prices.pdf 
+all: plot_prices.pdf plot_prices_percentual.pdf
 
 plot_prices.pdf: figures.R
 	mkdir -p ../../gen/analysis/output
 	R --vanilla < figures.R
+
+plot_prices_percentual.pdf: Percentual_Price_Plot.R
+	R --vanilla < Percentual_Price_Plot.R
