Output of linear model into text file, adjust makefile accordingly

--- a/src/analysis/makefile
+++ b/src/analysis/makefile
@@ -5,8 +5,10 @@ RESULT = ../../gen/analysis/output
 all: plot_prices.pdf plot_prices_percentual.pdf
 
 plot_prices.pdf: figures.R
-	mkdir -p ../../gen/analysis/output
 	R --vanilla < figures.R
+
+linear_regression.txt: Analysis_data.R
+	R --vanilla < Analysis_data.R
 
 plot_prices_percentual.pdf: Percentual_Price_Plot.R
 	R --vanilla < Percentual_Price_Plot.R
