Edit analysis makefile conform to datapreparation makefile

--- a/src/analysis/makefile
+++ b/src/analysis/makefile
@@ -1,14 +1,20 @@
-INPUT = ../../src/input
+INPUT = ../../gen/analysis/input
 RESULT = ../../gen/analysis/output
 
 
-all: plot_prices.pdf plot_prices_percentual.pdf
+all: $(RESULT)/linear_regression.txt $(INPUT)/data_for_full_plot.csv $(INPUT)/data_for_percentual_plot.csv $(RESULT)/full_prices_plot.pdf $(RESULT)/percentual_prices_plot.pdf 
 
-plot_prices.pdf: figures.R
-	R --vanilla < figures.R
+$(RESULT)/linear_regression.txt: linear_model.R
+	R --vanilla < linear_model.R
 
-linear_regression.txt: Analysis_data.R
-	R --vanilla < Analysis_data.R
+$(INPUT)/data_for_full_plot.csv: get_data_for_full_plot.R
+	R --vanilla < get_data_for_full_plot.R
 
-plot_prices_percentual.pdf: Percentual_Price_Plot.R
-	R --vanilla < Percentual_Price_Plot.R
+$(INPUT)/data_for_percentual_plot.csv: get_data_for_percentual_plot.R
+	R --vanilla < get_data_for_percentual_plot.R
+
+$(RESULT)/full_prices_plot.pdf: create_full_plot.R
+	R --vanilla < create_full_plot.R
+
+$(RESULT)/percentual_prices_plot.pdf: create_percentual_plot.R
+	R --vanilla < create_percentual_plot.R
